--- a/framework/scss/components/_calendar.scss
+++ b/framework/scss/components/_calendar.scss
@@ -151,6 +151,9 @@
 
           .ds44-boxLabel {
               padding: 0;
+              width: 1px;
+              height: 1px;
+              overflow: hidden;
           }
       }
   }
