--- a/docs/_includes/page/partial/recherche-resultats-assmat.html
+++ b/docs/_includes/page/partial/recherche-resultats-assmat.html
@@ -3,7 +3,7 @@
         <div class="ds44-listResults ds44-innerBoxContainer ds44-innerBoxContainer--list">
             <div class="ds44-js-results-container">
                 <div class="ds44-js-results-card" data-url="/json/search-card.json" aria-hidden="true"></div>
-                <div class="ds44-js-results-list" data-display-mode="inline">
+                <div class="ds44-js-results-list" data-multi-links="true" data-display-mode="inline">
                     <p id="ds44-results-new-search" class="h3-like mbs txtcenter center ds44--3xl-padding-t ds44--3xl-padding-b">
                         <span aria-level="2" role="heading">Veuillez faire une recherche ci-dessus pour afficher des résultats.</span>
                     </p>
