--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -1084,6 +1084,14 @@ input[type=radio],
 
 }
 
+.ds44-inputDisabled,
+.ds44-inputDisabled ~ input,
+.ds44-inputDisabled ~ textarea,
+.ds44-inputDisabled ~ label {
+    background: $ds44-lightgray;
+    cursor: default;
+}
+
 
 .ds44-fieldVertical .ds44-champsLies {
 
