--- a/docs/_includes/modal/contact-relais.html
+++ b/docs/_includes/modal/contact-relais.html
@@ -1,4 +1,4 @@
-<section class="ds44-modal-container" id="contactRelais" role="dialog" aria-modal="true" aria-labelledby="overlay-contactRelais">
+<section class="ds44-modal-container" id="contactRelais" role="dialog" aria-modal="true" aria-labelledby="overlay-faire-demande-title">
     <div class="ds44-modal-box ds44-whiteBG ">
         <button class="ds44-btnOverlay--modale ds44-btnOverlay--closeOverlay" type="button" title="Fermer l'aide : Contacter votre relais" data-js="ds44-modal-action-close">
             <i class="icon icon-cross icon--xlarge" aria-hidden="true"></i><span class="ds44-btnInnerText--bottom">Fermer</span>
@@ -9,28 +9,28 @@
 			<div class="ds44-mt3">
 				<h2 class="h4-like">Relais accueil petite enfance (RAPE) - Nantes Sud</h2>
                 <p class="ds44-docListElem mts"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Adresse : </span>2 ter route de Clisson<br /> 44200 Nantes</p>
-                <p class="ds44-docListElem mts"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i>02 40 41 95 00 </p>
+                <p class="ds44-docListElem mts"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Téléphone : </span>02 40 41 95 00 </p>
                 <p class="ds44-docListElem mts"><i class="icon icon-mail ds44-docListIco" aria-hidden="true"></i><a href="#mailto:contact@mail.fr" title="Contacter par email [Nom du relais] : [EmailDuRelais]">Contacter par email</a></p>
                 <p class="ds44-docListElem mts"><i class="icon icon-link ds44-docListIco" aria-hidden="true"></i><a href="https://www.loire-atlantique.fr" title="Site internet : [NomDuRelais] - [URL] – nouvelle fenêtre" target="_blank">Site internet</a></p>
 			</div>
 			<div class="ds44-mt3">
 				<h2 class="h4-like">Relais accueil petite enfance (RAPE) - Nantes Ouest</h2>
                 <p class="ds44-docListElem mts"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Adresse : </span>2 ter route de Clisson<br /> 44200 Nantes</p>
-                <p class="ds44-docListElem mts"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i>02 40 41 95 00 </p>
+                <p class="ds44-docListElem mts"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Téléphone : </span>02 40 41 95 00 </p>
                 <p class="ds44-docListElem mts"><i class="icon icon-mail ds44-docListIco" aria-hidden="true"></i><a href="#mailto:contact@mail.fr" title="Contacter par email [Nom du relais] : [EmailDuRelais]">Contacter par email</a></p>
                 <p class="ds44-docListElem mts"><i class="icon icon-link ds44-docListIco" aria-hidden="true"></i><a href="https://www.loire-atlantique.fr" title="Site internet : [NomDuRelais] - [URL] – nouvelle fenêtre" target="_blank">Site internet</a></p>
 			</div>
 			<div class="ds44-mt3">
 				<h2 class="h4-like">Relais accueil petite enfance (RAPE) - Nantes Nord</h2>
                 <p class="ds44-docListElem mts"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Adresse : </span>2 ter route de Clisson<br /> 44200 Nantes</p>
-                <p class="ds44-docListElem mts"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i>02 40 41 95 00 </p>
+                <p class="ds44-docListElem mts"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Téléphone : </span>02 40 41 95 00 </p>
                 <p class="ds44-docListElem mts"><i class="icon icon-mail ds44-docListIco" aria-hidden="true"></i><a href="#mailto:contact@mail.fr" title="Contacter par email [Nom du relais] : [EmailDuRelais]">Contacter par email</a></p>
                 <p class="ds44-docListElem mts"><i class="icon icon-link ds44-docListIco" aria-hidden="true"></i><a href="https://www.loire-atlantique.fr" title="Site internet : [NomDuRelais] - [URL] – nouvelle fenêtre" target="_blank">Site internet</a></p>
 			</div>
 			<div class="ds44-mt3">
 				<h2 class="h4-like">Relais accueil petite enfance (RAPE) - Nantes Centre</h2>
                 <p class="ds44-docListElem mts"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Adresse : </span>2 ter route de Clisson<br /> 44200 Nantes</p>
-                <p class="ds44-docListElem mts"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i>02 40 41 95 00 </p>
+                <p class="ds44-docListElem mts"><i class="icon icon-phone ds44-docListIco" aria-hidden="true"></i><span class="visually-hidden">Téléphone : </span>02 40 41 95 00 </p>
                 <p class="ds44-docListElem mts"><i class="icon icon-mail ds44-docListIco" aria-hidden="true"></i><a href="#mailto:contact@mail.fr" title="Contacter par email [Nom du relais] : [EmailDuRelais]">Contacter par email</a></p>
                 <p class="ds44-docListElem mts"><i class="icon icon-link ds44-docListIco" aria-hidden="true"></i><a href="https://www.loire-atlantique.fr" title="Site internet : [NomDuRelais] - [URL] – nouvelle fenêtre" target="_blank">Site internet</a></p>
 			</div>
