--- a/docs/_includes/composants-transverses/inc-calendrier-assmat-checkbox.html
+++ b/docs/_includes/composants-transverses/inc-calendrier-assmat-checkbox.html
@@ -1,8 +1,5 @@
-<p role="heading" aria-level="2">{{ include.title }}</p>
 <table class="tabDispos tabDispos_checkbox">
-  <caption class="caption-side bottom mtm">
-      <span class="visually-hidden">Semainier hebdomadaire de disponibilité des créneaux : {{ include.title }}</span>
-  </caption>
+  <caption role="heading" aria-level="2">{{ include.title }}</caption>
   <tbody>
     <tr>
       <td>&nbsp;</td>
