--- a/docs/_includes/composants-transverses/inc-calendrier-assmat.html
+++ b/docs/_includes/composants-transverses/inc-calendrier-assmat.html
@@ -1,5 +1,5 @@
-<p role="heading" aria-level="2">{{ include.title }}</p>
  <table class="tabDispos">
+     <caption role="heading" aria-level="2">{{ include.title }}</caption>
   <tbody>
     <tr>
       <td>&nbsp;</td>
