--- a/docs/_includes/page/recherche__avancee.html
+++ b/docs/_includes/page/recherche__avancee.html
@@ -4,10 +4,13 @@
         {% capture ariaDescribedBy %}filter-by-{{ formId }}{% endcapture %}
         {% capture fields %}
         <div class="ds44-fieldContainer ds44-fg1 ds44-fieldContainer--select">
-            {% include form/field/select/standard.html label="Select option" required="true" %}
+            {% include form/field/select/standard.html label="Select option" %}
+        </div>
+        <div class="ds44-fieldContainer ds44-fg1 ds44-fieldContainer--select">
+            {% include form/field/select/standard.html label="Select option" %}
         </div>
         <div class="ds44-fieldContainer ds44-fg1">
-            {% include form/field/input/standard.html label="Champ standard" required="true" %}
+            {% include form/field/input/standard.html label="Champ standard" %}
         </div>
         <div class="ds44-fieldContainer ds44-small-fg1">
             <button class="ds44-btnStd ds44-green {{ buttonClass }}" title="Ajouter une ligne de champs de recherche"><span class="visually-hidden">Ajouter une ligne de champs de recherche</span><i class="icon icon-plus" aria-hidden="true"></i></button>
