--- a/framework/scss/components/_wysiwyg.scss
+++ b/framework/scss/components/_wysiwyg.scss
@@ -295,6 +295,24 @@ table.historiqueAssmat {
   }
 }
 
+/* Tables Déclaration d'accueil des assmats */
+table.selection {
+  text-align: left;
+  width: 100%;
+
+  thead th {
+    font-size: 14px;
+    font-weight: normal;
+  }
+  td, th {
+    padding: 1rem;
+    vertical-align: top;
+  }
+  td {
+    padding: 3rem;
+  }
+}
+
 /* Tables */
 table.ds44-table {
     th {
