--- a/docs/_includes/form/layout/partial/recherche-facettes-main-avancee.html
+++ b/docs/_includes/form/layout/partial/recherche-facettes-main-avancee.html
@@ -5,11 +5,8 @@
 {% endif %}
 
 <div class="ds44-facetteContainer ds44-bgDark">
-    <div class="ds44-flex-container ds44--l-padding-b ds44-medium-flex-col">
+    <div class="ds44-flex-container ds44--l-padding-b ds44-medium-flex-col" data-duplicate-line>
         {{ include.fields }}
-    </div>
-    <div class="ds44-flex-container ds44--l-padding-b ds44-medium-flex-col">
-        {{ include.subfields }}
     </div>
     <button class="ds44-btnStd ds44-theme ds44-w100 {{ buttonClass }}" title="Lancer la recherche"><span class="ds44-btnInnerText">Rechercher</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></button>
 </div>
