--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -208,6 +208,10 @@
     margin-bottom: 0 !important;
 }
 
+.ds44-noMrgt {
+    margin-top: 0 !important;
+}
+
 .ds44-hmt {
     margin-top: $ds44-margin-base/2 !important;
 }
