fix : autocomplete detect chrome

--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -39,6 +39,9 @@ input[type="file"] {
     position: absolute;
     z-index: -1;
 }
+input:-webkit-autofill {
+    content: "";
+}
 
 .ds44-form__container {
     position: relative;
