fix : autocomplete detect firefox and chrome

--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -40,7 +40,7 @@ input[type="file"] {
     z-index: -1;
 }
 input:-webkit-autofill {
-    content: "";
+    content: "autofill";
 }
 
 .ds44-form__container {
