--- a/docs/_includes/form/field/partial/planning/td.html
+++ b/docs/_includes/form/field/partial/planning/td.html
@@ -1,9 +1,9 @@
-<td class="value" data-creneau-key="{{ include.creneauKey }}" data-value-key="start">
+<td class="value" data-col-key="{{ include.creneauKey }}" data-value-key="start">
   {% capture startFieldName %}creneau[{{ include.creneauKey }}][{{include.day}}][start]{% endcapture %}
   {% capture startFieldId %}creneau_{{ include.creneauKey }}_{{include.day}}_start{% endcapture %}
   {% include form/field/input/standard.html label="Heure de début" id=startFieldId name=startFieldName required="true" %}
 </td>
-<td class="value" data-creneau-key="{{ include.creneauKey }}" data-value-key="end">
+<td class="value" data-col-key="{{ include.creneauKey }}" data-value-key="end">
   {% capture endFieldName %}creneau[{{ include.creneauKey }}][{{include.day}}][start]{% endcapture %}
   {% capture endFieldId %}creneau_{{ include.creneauKey }}_{{include.day}}_end{% endcapture %}
   {% include form/field/input/standard.html label="Heure de fin" id=endFieldId name=endFieldName required="true" %}
