--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -983,7 +983,7 @@ input[type=radio],
 }
 
 /**
- * Date picker
+ * Date picker & Time
  */
 .ds44-datepicker__shape {
     cursor: pointer;
@@ -1009,6 +1009,25 @@ input[type=radio],
         span {
             display: inline;
         }
+    }
+}
+
+/**
+ * Time
+ */
+.ds44-time__shape {
+
+    cursor: pointer;
+    background-color: $ds44-light-color;
+    input {
+        border: none;
+        outline: none;
+        text-align: center;
+        width: 2.6rem;
+        background-color: transparent;
+    }
+    span {
+        display: inline;
     }
 }
 
@@ -1073,6 +1092,7 @@ input[type=radio],
         input,
         .ds44-select__shape,
         .ds44-datepicker__shape,
+        .ds44-time__shape,
         .ds44-file__shape {
             border-radius: 3px 0 0 3px;
         }
@@ -1088,6 +1108,7 @@ input[type=radio],
         input,
         .ds44-select__shape,
         .ds44-datepicker__shape,
+        .ds44-time__shape,
         .ds44-file__shape {
             border-radius: 0 3px 3px 0;
             margin-left: -1px;
@@ -1261,6 +1282,7 @@ input[type=radio],
             input,
             .ds44-select__shape,
             .ds44-datepicker__shape,
+            .ds44-time__shape,
             .ds44-file__shape {
                 border-radius: 3px 3px 0 0;
             }
@@ -1275,6 +1297,7 @@ input[type=radio],
             input,
             .ds44-select__shape,
             .ds44-datepicker__shape,
+            .ds44-time__shape,
             .ds44-file__shape {
                 border-radius: 0 0 3px 3px;
                 margin: -1px 0 0 0;
@@ -1288,17 +1311,33 @@ input[type=radio],
 }
 
 .ds44-planning {
-    th, td {
+    th {
+      height: 4.5rem;
+    }
+    thead .second th:first-child,
+    thead .first th[data-col-key] {
+        background: $ds44-LA;
+    }
+    td {
         height: 8.5rem;
         .ds44-form__container {
             margin: 1rem 0;
         }
     }
+    thead .first th:last-child,
+    *[data-value-key="end"]:last-child {
+        padding-right: 2rem;
+    }
     td {
-        input {
-            width: 10rem;
-            padding: 1.1rem 1rem 1rem 1rem;
+        &:nth-child(2) {
+            padding-left: 2rem;
         }
+        label {
+            display:none;
+        }
+    }
+    .ds44-planning-table {
+        margin: 2rem 0;
     }
 }
 
