fix : minute start with 0

--- a/docs/_includes/form/field/input/time.html
+++ b/docs/_includes/form/field/input/time.html
@@ -8,8 +8,8 @@
     {% capture minuteLabel %}title="{{ label }} : Minute (ex. 05)"{% endcapture %}
 {% endif %}
 
-{% capture hourValue %}13{% endcapture %}
-{% capture minuteValue %}30{% endcapture %}
+{% capture hourValue %}{% endcapture %}
+{% capture minuteValue %}{% endcapture %}
 
 {% assign labelClass = labelClass | append: ' ds44-time' %}
 
