feat : update planning

--- a/docs/_includes/form/field/input/planning.html
+++ b/docs/_includes/form/field/input/planning.html
@@ -1,6 +1,6 @@
-{% capture templateThFirst %}{% include form/field/partial/planning/thFirst.html creneauKey="__CRENEAU_NUM__" %}{% endcapture %}
-{% capture templateThSecond %}{% include form/field/partial/planning/thSecond.html creneauKey="__CRENEAU_NUM__" %}{% endcapture %}
-{% capture templateTd %}{% include form/field/partial/planning/td.html creneauKey="__CRENEAU_NUM__" day="__DAY__" %}{% endcapture %}
+{% capture templateThFirst %}{% include form/field/partial/planning/thFirst.html creneauName=include.creneauName creneauKey="__CRENEAU_NUM__" %}{% endcapture %}
+{% capture templateThSecond %}{% include form/field/partial/planning/thSecond.html  creneauName=include.creneauName creneauKey="__CRENEAU_NUM__" %}{% endcapture %}
+{% capture templateTd %}{% include form/field/partial/planning/td.html  creneauName=include.creneauName creneauKey="__CRENEAU_NUM__" day="__DAY__" %}{% endcapture %}
 
 <div class="ds44-planning" data-limit-max="3" data-limit-min="1">
 
@@ -12,58 +12,63 @@
   {% endif %}
 
 
-  <span class="content-button">
-    <button class="ds44-btnStd ds44-btn--contextual" data-planning-action="add">
-      <span class="ds44-btnInnerText">Ajouter un créneau</span>
+  <div class="content-button">
+    <button class="ds44-btnStd ds44-btn--contextual" data-planning-action="copy-paste">
+      <span class="ds44-btnInnerText">Copier et coller la première ligne</span>
     </button>
-    <button class="ds44-btnStd ds44-btn--contextual" data-planning-action="remove">
-      <span class="ds44-btnInnerText">Supprimer un créneau</span>
-    </button>
-  </span>
+  </div>
 
-  <table class="ds44-planning-table">
-    <thead>
+  <div class="ds44-planing-table-button">
+    <table class="ds44-planning-table">
+      <thead>
       <tr class="first" data-row-name="th-first">
         <th></th>
-        {% include form/field/partial/planning/thFirst.html creneauKey="1" %}
+        {% include form/field/partial/planning/thFirst.html creneauName=include.creneauName creneauKey="1" %}
       </tr>
       <tr class="second" data-row-name="th-second">
         <th>Jours</th>
-        {% include form/field/partial/planning/thSecond.html creneauKey="1" %}
+        {% include form/field/partial/planning/thSecond.html creneauName=include.creneauName creneauKey="1" %}
       </tr>
-    </thead>
-    <tbody>
+      </thead>
+      <tbody>
       <tr data-first-line></tr>
       <tr data-row-name="monday">
         <td class="day">Lundi</td>
-        {% include form/field/partial/planning/td.html creneauKey="1" day="monday" %}
+        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="monday" %}
       </tr>
       <tr data-row-name="tuesday">
         <td class="value">Mardi</td>
-        {% include form/field/partial/planning/td.html creneauKey="1" day="tuesday" %}
+        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="tuesday" %}
       </tr>
       <tr data-row-name="wednesday">
         <td class="value">Mercredi</td>
-        {% include form/field/partial/planning/td.html creneauKey="1" day="wednesday" %}
+        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="wednesday" %}
       </tr>
       <tr data-row-name="thursday">
         <td class="value">Jeudi</td>
-        {% include form/field/partial/planning/td.html creneauKey="1" day="thursday" %}
+        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="thursday" %}
       </tr>
       <tr data-row-name="friday">
         <td class="value">Vendredi</td>
-        {% include form/field/partial/planning/td.html creneauKey="1" day="friday" %}
+        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="friday" %}
       </tr>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+    <div class="content-button">
+      <button class="ds44-btnStd ds44-btn--contextual" data-planning-action="add">
+        <span class="ds44-btnInnerText">Ajouter un créneau</span>
+      </button>
+    </div>
+  </div>
 
-  <span class="content-button">
+
+  <div class="content-button">
     <button class="ds44-btnStd ds44-btn--contextual" data-planning-action="add">
       <span class="ds44-btnInnerText">Ajouter un créneau</span>
     </button>
     <button class="ds44-btnStd ds44-btn--contextual" data-planning-action="remove">
       <span class="ds44-btnInnerText">Supprimer un créneau</span>
     </button>
-  </span>
+  </div>
 
 </div>
