--- a/docs/_includes/form/field/partial/planning/thFirst.html
+++ b/docs/_includes/form/field/partial/planning/thFirst.html
@@ -1,1 +1,1 @@
-<th colspan="2" data-col-key="{{ include.creneauKey }}" data-value-key="creneau_{{ include.creneauKey }}">Créneau {{ include.creneauKey }}</th>
+<th colspan="2" data-col-key="{{ include.creneauKey }}" data-value-key="{{include.creneauName}}_{{ include.creneauKey }}">Créneau {{ include.creneauKey }}</th>
