--- a/docs/_includes/form/field/input/planning.html
+++ b/docs/_includes/form/field/input/planning.html
@@ -1,6 +1,7 @@
 {% capture templateThFirst %}{% include form/field/partial/planning/thFirst.html creneauName=include.creneauName creneauKey="__CRENEAU_NUM__" %}{% endcapture %}
 {% capture templateThSecond %}{% include form/field/partial/planning/thSecond.html  creneauName=include.creneauName creneauKey="__CRENEAU_NUM__" %}{% endcapture %}
-{% capture templateTd %}{% include form/field/partial/planning/td.html  creneauName=include.creneauName creneauKey="__CRENEAU_NUM__" day="__DAY__" %}{% endcapture %}
+{% capture templateTd %}{% include form/field/partial/planning/td.html  creneauName=include.creneauName creneauKey="__CRENEAU_NUM__" creneauValueDebut="__CRENEAU_DEB__"
+creneauValueFin="__CRENEAU_FIN__" day="__DAY__" %}{% endcapture %}
 
 <div class="ds44-planning" data-limit-max="3" data-limit-min="1">
 
@@ -34,23 +35,28 @@
       <tr data-first-line></tr>
       <tr data-row-name="monday">
         <td class="day">Lundi</td>
-        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="monday" %}
+        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="monday" creneauValueDebut="debcr1"
+creneauValueFin="fincr1" %}
       </tr>
       <tr data-row-name="tuesday">
         <td class="value">Mardi</td>
-        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="tuesday" %}
+        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="tuesday" creneauValueDebut="debcr1"
+creneauValueFin="fincr1" %}
       </tr>
       <tr data-row-name="wednesday">
         <td class="value">Mercredi</td>
-        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="wednesday" %}
+        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="wednesday" creneauValueDebut="debcr1"
+creneauValueFin="fincr1" %}
       </tr>
       <tr data-row-name="thursday">
         <td class="value">Jeudi</td>
-        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="thursday" %}
+        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="thursday" creneauValueDebut="debcr1"
+creneauValueFin="fincr1" %}
       </tr>
       <tr data-row-name="friday">
         <td class="value">Vendredi</td>
-        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="friday" %}
+        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="friday" creneauValueDebut="debcr1"
+creneauValueFin="fincr1" %}
       </tr>
       </tbody>
     </table>
