--- a/docs/_includes/form/layout/partial/recherche-facettes-export.html
+++ b/docs/_includes/form/layout/partial/recherche-facettes-export.html
@@ -5,7 +5,7 @@
     </li>
     <li class="ds44-docListElem">
         <i class="icon icon-print ds44-docListIco" aria-hidden="true"></i>
-        <a href="#">Afficher les résultats en tableau</a>
+        <a href="#" data-link-has-result>Afficher les résultats en tableau</a>
     </li>
     <!-- <li class="ds44-docListElem">
         <i class="icon icon-csv ds44-docListIco" aria-hidden="true"></i>
