--- a/framework/scss/components/_header.scss
+++ b/framework/scss/components/_header.scss
@@ -97,6 +97,32 @@
   }
 }
 
+.ds44-subMenu {
+    position:fixed;
+    background: $ds44-light-color;
+    display:none;
+    box-shadow: 0px 13px 20px 0px rgba(0, 0, 0, 0.35);
+    width: 35rem;
+    &.full {
+        width: auto;
+    }
+    &.view {
+        display:block;
+    }
+    .ds44-list {
+        padding: 2rem;
+        li {
+            &:last-child {
+                padding-bottom: 0;
+            }
+            padding-bottom: 3rem;
+        }
+        a {
+            font-size: 1.2em;
+            text-decoration: none;
+        }
+    }
+}
 
 
 /* --------------- */
@@ -142,7 +168,8 @@
             padding: $ds44-padding-xlarge  $ds44-padding-large;
 
             .icon + .ds44-btnInnerText,
-            .ds44-btnInnerText + .icon {
+            .ds44-btnInnerText + .icon,
+            .icon + .icon {
                 margin-left: 0;
             }
 
