--- a/docs/_includes/form/field/input/planning.html
+++ b/docs/_includes/form/field/input/planning.html
@@ -1,81 +1,79 @@
 {% capture templateThFirst %}{% include form/field/partial/planning/thFirst.html creneauName=include.creneauName creneauKey="__CRENEAU_NUM__" %}{% endcapture %}
 {% capture templateThSecond %}{% include form/field/partial/planning/thSecond.html  creneauName=include.creneauName creneauKey="__CRENEAU_NUM__" %}{% endcapture %}
-{% capture templateTd %}{% include form/field/partial/planning/td.html  creneauName=include.creneauName creneauKey="__CRENEAU_NUM__" creneauValueDebut="__CRENEAU_DEB__"
-creneauValueFin="__CRENEAU_FIN__" day="__DAY__" %}{% endcapture %}
+{% capture templateTd %}{% include form/field/partial/planning/td.html  creneauName=include.creneauName creneauKey="__CRENEAU_NUM__" day="__DAY__" %}{% endcapture %}
 
-<div class="ds44-planning" data-limit-max="3" data-limit-min="1">
+<form action="" >
 
-  {% if include.choiceDays %}
-    <div class="ds-44-choices-days">
-      <h3 class="h3-like" id="idTitre3">Quels jours accueillez-vous l'enfant ?</h3>
-      {% include form/layout/checkboxes.html label="Choisissez les jours d'accueils" choices="monday:Lundi,tuesday:Mardi,wednesday:Mercredi,thursday:Jeudi,friday:Vendredi,saturday:Samedi,sunday:Dimanche" required="true" list="true" %}
+    <div class="ds44-planning" data-limit-max="3" data-limit-min="1">
+
+      {% if include.choiceDays %}
+        <div class="ds-44-choices-days">
+          <h3 class="h3-like" id="idTitre3">Quels jours accueillez-vous l'enfant ?</h3>
+          {% include form/layout/checkboxes.html label="Choisissez les jours d'accueils" choices="monday:Lundi,tuesday:Mardi,wednesday:Mercredi,thursday:Jeudi,friday:Vendredi,saturday:Samedi,sunday:Dimanche" required="true" list="true" %}
+        </div>
+      {% endif %}
+
+
+      <div class="content-button">
+        <button class="ds44-btnStd ds44-btn--invert" data-planning-action="copy-paste">
+          <span class="ds44-btnInnerText">Copier et coller la première ligne</span>
+        </button>
+      </div>
+
+      <div class="ds44-planing-table-button">
+        <table class="ds44-planning-table">
+          <thead>
+          <tr class="first" data-row-name="th-first">
+            <th></th>
+            {% include form/field/partial/planning/thFirst.html creneauName=include.creneauName creneauKey="1" %}
+          </tr>
+          <tr class="second" data-row-name="th-second">
+            <th>Jours</th>
+            {% include form/field/partial/planning/thSecond.html creneauName=include.creneauName creneauKey="1" %}
+          </tr>
+          </thead>
+          <tbody>
+          <tr data-first-line></tr>
+          <tr data-row-name="monday">
+            <td class="day">Lundi</td>
+            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="monday" %}
+          </tr>
+          <tr data-row-name="tuesday">
+            <td class="value">Mardi</td>
+            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="tuesday" %}
+          </tr>
+          <tr data-row-name="wednesday">
+            <td class="value">Mercredi</td>
+            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="wednesday" %}
+          </tr>
+          <tr data-row-name="thursday">
+            <td class="value">Jeudi</td>
+            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="thursday" %}
+          </tr>
+          <tr data-row-name="friday">
+            <td class="value">Vendredi</td>
+            {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="friday" %}
+          </tr>
+          </tbody>
+        </table>
+        <div class="content-button">
+          <button class="ds44-btnStd ds44-btn--invert" data-planning-action="add">
+            <i class="icon icon-plus" aria-hidden="true"></i>
+            <span class="ds44-btnInnerText">Ajouter un créneau</span>
+          </button>
+          {% capture idToolTips %}tooltips-{{include.creneauName}}{%endcapture%}
+          {% include composants-transverses/inc-tooltips.html description="Si vous gardez l’enfant sur plusieurs plages horaires dans la même journée, ajouter des créneaux pour saisir toutes les plages horaires. Vous pouvez saisir jusqu’à trois créneaux." idTooltips=idToolTips %}
+        </div>
+      </div>
+
+
+      <div class="content-button">
+        <button class="ds44-btnStd ds44-btn--invert" data-planning-action="remove">
+          <i class="icon icon-cross" aria-hidden="true"></i>
+          <span class="ds44-btnInnerText">Supprimer un créneau</span>
+        </button>
+      </div>
+
     </div>
-  {% endif %}
-
-
-  <div class="content-button">
-    <button class="ds44-btnStd ds44-btn--invert" data-planning-action="copy-paste">
-      <span class="ds44-btnInnerText">Copier et coller la première ligne</span>
-    </button>
-  </div>
-
-  <div class="ds44-planing-table-button">
-    <table class="ds44-planning-table">
-      <thead>
-      <tr class="first" data-row-name="th-first">
-        <th></th>
-        {% include form/field/partial/planning/thFirst.html creneauName=include.creneauName creneauKey="1" %}
-      </tr>
-      <tr class="second" data-row-name="th-second">
-        <th>Jours</th>
-        {% include form/field/partial/planning/thSecond.html creneauName=include.creneauName creneauKey="1" %}
-      </tr>
-      </thead>
-      <tbody>
-      <tr data-first-line></tr>
-      <tr data-row-name="monday">
-        <td class="day">Lundi</td>
-        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="monday" creneauValueDebut="debcr1"
-creneauValueFin="fincr1" %}
-      </tr>
-      <tr data-row-name="tuesday">
-        <td class="value">Mardi</td>
-        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="tuesday" creneauValueDebut="debcr1"
-creneauValueFin="fincr1" %}
-      </tr>
-      <tr data-row-name="wednesday">
-        <td class="value">Mercredi</td>
-        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="wednesday" creneauValueDebut="debcr1"
-creneauValueFin="fincr1" %}
-      </tr>
-      <tr data-row-name="thursday">
-        <td class="value">Jeudi</td>
-        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="thursday" creneauValueDebut="debcr1"
-creneauValueFin="fincr1" %}
-      </tr>
-      <tr data-row-name="friday">
-        <td class="value">Vendredi</td>
-        {% include form/field/partial/planning/td.html creneauName=include.creneauName creneauKey="1" day="friday" creneauValueDebut="debcr1"
-creneauValueFin="fincr1" %}
-      </tr>
-      </tbody>
-    </table>
-    <div class="content-button">
-      <button class="ds44-btnStd ds44-btn--invert" data-planning-action="add">
-        <i class="icon icon-plus" aria-hidden="true"></i>
-        <span class="ds44-btnInnerText">Ajouter un créneau</span>
-      </button>
-      {% capture idToolTips %}tooltips-{{include.creneauName}}{%endcapture%}
-      {% include composants-transverses/inc-tooltips.html description="Si vous gardez l’enfant sur plusieurs plages horaires dans la même journée, ajouter des créneaux pour saisir toutes les plages horaires. Vous pouvez saisir jusqu’à trois créneaux." idTooltips=idToolTips %}
-    </div>
-  </div>
-
-
-  <div class="content-button">
-    <button class="ds44-btnStd ds44-btn--invert" data-planning-action="remove">
-      <i class="icon icon-cross" aria-hidden="true"></i>
-      <span class="ds44-btnInnerText">Supprimer un créneau</span>
-    </button>
-  </div>
-
-</div>
+    <div style="padding-top: 2rem;"><input data-send-native type="submit" class="ds44-btnStd" value="Tester les champs" /></div>
+</form>
