--- a/docs/_includes/form/layout/checkboxes-planning.html
+++ b/docs/_includes/form/layout/checkboxes-planning.html
@@ -4,7 +4,7 @@
     {% assign containerClass = containerClass | append: ' ds44-inputDisabled' %}
 {% endif %}
 
-<div id="{{ id }}" data-name="{{ name }}" class="ds44-form__checkbox_container {{ containerClass }}" {{ containerAttributes }}>
+<div id="{{ include.planningName }}_{{ id }}" data-name="{{ include.planningName }}_{{ name }}" class="ds44-form__checkbox_container {{ containerClass }}" {{ containerAttributes }}>
     {% if include.required == 'true' %}
         <p id="mandatory-message-{{ id }}" class="">{{ include.label }}{{ requiredStar }}</p>
         {% capture ariaDescribedBy %}mandatory-message-{{ id }}{% if ariaDescribedBy and ariaDescribedBy != '' %} {{ ariaDescribedBy }}{% endif %}{% endcapture %}
@@ -14,14 +14,15 @@
     {% assign attributesDefault = attributes %}
     {% assign idDefault = id %}
     {% assign nameDefault = name %}
+    {% assign planningName = include.planningName %}
     {% for choiceData in choices %}
         {% assign choice = (choiceData | split:':') %}
         {% assign value = choice[0] %}
         {% assign label = choice[1] %}
         {% assign dataDay = choice[2] %}
         {% assign attributesByDay = attributesDefault | append : ' data-day="' | append: dataDay | append: '"' %}
-        {% assign idByDay = idDefault | append : '-day-' | append: dataDay %}
-        {% assign nameByDay = nameDefault | append : '-day-' | append: dataDay %}
+        {% assign idByDay = idDefault | append : "_" | append: planningName | append : "_" | append : '-day-' | append: dataDay %}
+        {% assign nameByDay = nameDefault | append : "_" | append : planningName | append : "_" | append : '-day-' | append: dataDay %}
 
         {% include form/field/box/checkbox.html id=idByDay name=nameByDay value=value label=label list=include.list attributes=attributesByDay boxAttributes=boxAttributes ariaDescribedBy=ariaDescribedBy %}
     {% endfor %}
