--- a/framework/scss/components/_forms.scss
+++ b/framework/scss/components/_forms.scss
@@ -1310,6 +1310,12 @@ input[type=radio],
     }
 }
 
+.ds44-plannings {
+    .ds44-planning {
+        margin: 4rem 0;
+    }
+}
+
 .ds44-planning {
     .ds44-planing-table-button {
         margin: 2rem -1rem;
